SWANDROID-3325: [PM] STB reboots during shutdown sequence
The BT_HOST_WAKE signal from the BT chip was inadvertently waking
the STB up during shutdown.  The simple fix is to ensure that the
BT_DEV_WAKE signal is left HIGH when entering S5.  This now allows
the STB to fully shutdown using either:

a) Long-press of the POWER button method.
b) Setting the Android property "persist.sys.power.offstate" to "S5
   and doing a normal (short) press of the POWER button.

refs #SWANDROID-3325

Change-Id: I4fa2b9a4caa8f0bc0af8f8d7ff4d3a0d4e7a1569

--- a/aon_gpio.cfg
+++ b/aon_gpio.cfg
@@ -54,9 +54,9 @@
 # Configure AON_GPIO #17 as rising edge interrupt triggered for BT_HOST_WAKE signal
 AON_GPIO17 = [Input,RisingEdge]
 
-# Configure GPIO #65 as an output, Low in S2-S5.
+# Configure GPIO #65 as an output, Low in S0.5-S4.
 # This signals the BT_DEV_WAKE pin when the BT chip needs to go to WoBLE mode.
-GPIO65 = [OpenDrain,High,High,High,Low,Low,Low,Low]
+GPIO65 = [OpenDrain,High,Low,Low,Low,Low,Low,High]
 
 # Configure AON_GPIO #0 to only pull the WLAN_REG_ON signal low when entering S5
 AON_GPIO00 = [Input,FallingEdge]
