--- a/rcs/aon_gpio.cfg
+++ b/rcs/aon_gpio.cfg
@@ -71,7 +71,7 @@
 
 # Configure AON_GPIO #17 as rising edge interrupt triggered for BT_HOST_WAKE signal
 # Generate a wakeup key input to speed up turning on the screen while BT connects
-AON_GPIO17 = [Input,RisingEdge,Wakeup,BT]
+AON_GPIO17 = [Input,RisingEdge,None,BT]
 
 # Configure GPIO #65 as an output, Low in S0.5-S5.
 # This signals the BT_DEV_WAKE pin when the BT chip needs to go to WoBLE mode.
