avko: Change BT sleep behavior
Keep BT chip awake in all but S5 mode. The BT chip can wake the host
as needed, and the BT stack is running (except in S5), so we don't
need a special wake on BLE mode, or special remote control devices.

refs #SWANDROID-5253

Change-Id: Ib56959bb8a948d23f1275c0e21c43d245abd3774

--- a/rcs/aon_gpio.cfg
+++ b/rcs/aon_gpio.cfg
@@ -73,9 +73,9 @@
 # Generate a wakeup key input to speed up turning on the screen while BT connects
 AON_GPIO17 = [Input,RisingEdge,None,BT]
 
-# Configure GPIO #65 as an output, Low in S0.5-S5.
+# Configure GPIO #65 as an output, always high
 # This signals the BT_DEV_WAKE pin when the BT chip needs to go to WoBLE mode.
-GPIO65 = [OpenDrain,High,Low,Low,Low,Low,Low,High]
+GPIO65 = [OpenDrain,High,High,High,High,High,High,High]
 
 # Configure AON_GPIO #0 as falling/negative edge interrupt triggered for WoWLAN
 AON_GPIO00 = [Input,FallingEdge]
